--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -2,75 +2,45 @@
 $colorMain: white;
 $fontArchivo: "Archivo", sans-serif;
 
-
-
 *{
   font-family: $fontArchivo;
 }
+
 .portfolio{
-  position: relative;
-  z-index: 0;
-  @include desktop{
-    display: flex;
-    flex-direction: column;
+  display: flex;
+  flex-direction: column;
+  margin-bottom: 2em;
+  @include mobile{
     align-items: center;
   }
-}
-  .buttons{
-     display: flex;
-     flex-direction: row;
-     justify-content: center;
-     font-size: 1.2em;
-     font-weight: 500;
-     padding: 1em;
-    .buttSort{
-      @include hrefButt{
-        margin: 1em;
-      }
-    }
-   }
-  .pictureSection{
+  @include tablet{
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    flex-wrap: wrap;
+    margin-bottom: 10em;
+    gap: 0.5em 1em;
+  }
+  @include desktop{
+    flex-direction: row;
+    justify-content: center;
+    align-items: baseline;
+    flex-wrap: wrap;
+    margin-bottom: 10em;
+    gap: 1em;
+  }
+  .pictureSection{    
     display: flex;
     flex-direction: column;
-    margin-bottom: 4em;
     @include tablet{
-      margin: 0.5em 0 4em 0;
+      max-width: 48%;
     }
     @include desktop{
-      margin: 0 auto;
-      flex-direction: row;
-      justify-content: center;
-      max-width: 78em;
+      max-width: 32%;
     }
-    .row{
-      width:100%;
-      height: auto;
-      @include tablet{
-        display: flex;
-        flex-direction: row;
-        justify-content: center;
-      }
-      @include desktop{
-        max-width: 20em;
-        flex-direction: column;
-        gap:0;
-        margin-bottom: 4em;
-      }
-      .column{
-        position: relative;
-        display: flex;
-        justify-content: center;
-        @include mobile{
-          margin-bottom: 0.5em;
-        }
-        @include tablet{
-          max-width: 100%;
-          margin: 0.5em 0.5em 0 0.5em;
-        }
-        @include desktop{
-          max-width: 100%;
-          margin: 1em 0.5em 0.5em 0.5em;
-        }
+    a{
+      position: relative;
+    }
         &:hover{
           img{
             opacity: 0.15;
@@ -82,18 +52,18 @@ $fontArchivo: "Archivo", sans-serif;
         img{
           max-width: 20em;
           width: 100%;
-          height: auto;
+          
         }
         .title{
           max-width: 10em;
           position: absolute;
           font-size: 1.5em;
           top: 30%;
-          left: 20%;
+          left: 15%;
           opacity: 0;
         }
-      }
-    }
   }
+
+} 
   
   
