--- a/src/scss/_portfolio.scss
+++ b/src/scss/_portfolio.scss
@@ -16,6 +16,7 @@ $fontArchivo: "Archivo", sans-serif;
         width: 100%;
         display: flex;
         flex-direction: column;
+        flex-wrap: wrap;
         button{
             font-size: 10px;
             font-weight: 400;
