--- a/src/scss/_body3.scss
+++ b/src/scss/_body3.scss
@@ -16,9 +16,12 @@ $fontArchivo: "Archivo", sans-serif;
         flex-direction: column;
         align-items: center;
         h2{
-            margin: 0 0 1em 0;
+            margin: 0;
             width: 100%;
             text-align: center;
+        }
+        p{
+            margin: 0;
         }
         input{
             border: 1px solid rgb(63, 63, 63);
@@ -57,7 +60,7 @@ $fontArchivo: "Archivo", sans-serif;
             align-self: center;
             border: 2px solid white;
             background-color: black;
-            padding: 1.2em 4.5em;
+            padding: 1em 3.5em;
             font-weight: 500;
             span{
                 color: black;
