--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -2,8 +2,8 @@
 @import "./_footer.scss";
 @import "./_body.scss";
 @import "./_header.scss";
-@import "./body2.scss";
-@import "./body3.scss";
+@import "./about.scss";
+@import "./contact.scss";
 @import "./mixins.scss";
 @import "./portfolio.scss";
 
