--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -77,24 +77,36 @@ $fontArchivo: "Archivo", sans-serif;
         flex-wrap: wrap;
         justify-content: center;
         img{
-            max-width: 80px;
-            max-height: 80px;
-            padding: 1.5em;
+            width: 80px;
+            height: 80px;
+            margin: 1em;
+            padding: 1em;
         @include picture{
-            padding: 2em;
-        }
-        @include picture2{
-            padding: 3em;
-        }
-        @include picture3{
-            padding: 3.9em;
-        }
-        @include tablet{
-            padding: 3.80em;
-        }
-        @include desktop{
             padding: 1em;
         }
+        @include picture2{
+            padding: 2em;
+        }
+        @include picture3{
+            padding: 2.9em;
+        }
+        @include tablet{
+            padding: 2.8em;
+        }
+        @include desktop{
+            padding: 0.5em;
+        }
+        }
+        .skoda{
+            width: 74px;
+        }
+        .nestle{
+            width: 74px;
+        }
+        .windingtree{
+            width: 110px;
+            height: 110px;
+            margin: 0.05em;
         }
     }
     .aboutButton{
