--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -18,16 +18,17 @@ $fontArchivo: "Archivo", sans-serif;
     justify-content: center;
     align-items: baseline;
     flex-wrap: wrap;
-    margin-bottom: 10em;
+    margin-bottom: 2em;
     gap: 0.5em 1em;
   }
   @include desktop{
     flex-direction: row;
-    justify-content: center;
+    justify-content: flex-start;
     align-items: baseline;
     flex-wrap: wrap;
-    margin-bottom: 10em;
-    gap: 1em;
+    margin-bottom: 6em;
+    margin-top: 2em;
+    gap: 0.5em 1em;
   }
   .pictureSection{    
     display: flex;
