--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -20,6 +20,9 @@ $colorMain: white;
   }
     .kory{
       width: 10em;
+      font-weight: bold;
+      font-size: 20px;
+      text-align: center;
     }
   .menu{
     position: relative;
