--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -49,6 +49,7 @@ a {
 .container{
   width: 90vw;
   max-width: 1000px;
+  min-height: 83vh;
   margin: 0 auto; 
   position: relative;
   display: flex;
