--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -22,7 +22,7 @@ $fontArchivo: "Archivo", sans-serif;
     gap: 0.5em 1em;
   }
   @include desktop{
-    flex-direction: row;
+    flex-direction: row; 
     justify-content: flex-start;
     align-items: baseline;
     flex-wrap: wrap;
@@ -31,38 +31,57 @@ $fontArchivo: "Archivo", sans-serif;
     gap: 0.5em 1em;
   }
   .pictureSection{    
-    display: flex;
-    flex-direction: column;
+    width: 20rem;
+    height: 20rem;
+    overflow: hidden;
     @include tablet{
       max-width: 48%;
     }
     @include desktop{
       max-width: 32%;
     }
+    .blue {
+      background: linear-gradient(to bottom right, black 50%, #075d8f91 90%);
+    }
+    .red {
+      background: linear-gradient(to bottom right, black 50%, #750000ab 90%);
+    }
+    .purple {
+      background: linear-gradient(to bottom right, black 50%, #5c0064c2 90%);
+    }
     a{
       position: relative;
-    }
-        &:hover{
-          img{
-            opacity: 0.15;
-          }
-          .title{
-            opacity: 1;
-          }
+      width: 100%;
+      height: 100%;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+        h2 {
+          font-weight: 800;
+          font-size: 3.5rem;
+          margin: 0.5rem 0 0 0.5rem;
+          line-height: 1.1;
+          z-index: 3;
         }
         img{
-          max-width: 20em;
-          width: 100%;
-          
-        }
-        .title{
-          max-width: 10em;
+          transform: scale(0.75);
           position: absolute;
-          font-size: 1.5em;
-          top: 30%;
-          left: 15%;
-          opacity: 0;
+          top: 1rem;
+          right: -0.5rem;
+          z-index: 2;
+          transition: transform 0.3s ease;
         }
+        p {
+          font-size: 1rem;
+          opacity: 0.3;
+          margin: 0 0 0.5rem 0.5rem;
+        }
+        &:hover img{
+          z-index: 4;
+            transform: translate(-3.2rem, 2rem) scale(1.3);
+          }
+                  
+    }
   }
 
 } 
