--- a/src/scss/_about.scss
+++ b/src/scss/_about.scss
@@ -1,13 +1,25 @@
 @import "./mixins.scss";
-$colorMain: white;
-$fontArchivo: "Archivo", sans-serif;
+@import "./variables.scss";
 
-
+h1 {
+    font-size: $h1m;
+    line-height: 2.2rem;
+}
+h2 {
+    font-size: $h2m;
+    line-height: 1.85rem;
+    width: 100%;
+}
+p {
+    font-size: $pm;
+    line-height: 1.1rem;
+}
 
 .about {
     width: 100%;
     display: flex;
     flex-direction: column;
+    text-align: center;
     @include tablet{
         flex-direction: row;
         flex-wrap: wrap;
@@ -26,15 +38,6 @@ $fontArchivo: "Archivo", sans-serif;
         }
         @include desktop{
             max-width: 35%;
-        }
-        h2{
-            font-size: 1.25em;
-            font-weight: 600;  
-        }
-        .aboutTextP{
-            font-size: 1em;
-            font-weight: 500;
-            line-height: 1.15em;
         }
     }
     .aboutPic{
@@ -77,9 +80,8 @@ $fontArchivo: "Archivo", sans-serif;
         flex-wrap: wrap;
         justify-content: center;
         img{
-            width: 80px;
-            height: 80px;
-            margin: 1em;
+            width: 70px;
+            height: 70px;
             padding: 1em;
         @include picture{
             padding: 1em;
@@ -98,15 +100,15 @@ $fontArchivo: "Archivo", sans-serif;
         }
         }
         .skoda{
-            width: 74px;
+            width: 65px;
         }
         .nestle{
-            width: 74px;
+            width: 65px;
         }
         .windingtree{
-            width: 110px;
-            height: 110px;
-            margin: 0.05em;
+            width: 102px;
+            height: 102px;
+            padding: 0;
         }
     }
     .aboutButton{
