--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -1,73 +1,73 @@
 @import "./mixins.scss";
-$colorMain: white;
-$fontArchivo: "Archivo", sans-serif;
+@import "./variables.scss";
 
-.contact{
-    height: 83.2vh;
+h2 {
+    font-size: $h2m;
+    font-weight: $header;
+    margin-bottom: 0.5rem;
+}
+
+.contact {
     width: 100%;
     display: flex;
     flex-direction: column;
-    justify-content: center;
     align-items: center;
-    form{
+    text-align: center;
+    .contactForm {
         width: 100%;
-        max-width: 400px;
         display: flex;
         flex-direction: column;
-        align-items: center;
-        h2{
-            margin: 0;
-            width: 100%;
-            text-align: center;
+        gap: 1.5rem;
+        margin-bottom: 3rem;
+        input, textarea {
+            background-color: $bckgr;
+            border: 1px solid rgba(255, 255, 255, 0.747);
+            color: rgb(255, 255, 255);
+            padding: 0.75rem;
+            font-weight: 300;
         }
-        p{
-            margin: 0;
+        label {
+            display: flex;
+            align-items: center;
         }
-        input{
-            border: 1px solid rgb(63, 63, 63);
-            width: 80%;
-            margin-bottom: 0.5em;
-            background-color: black;
+        #gdpr {
+            appearance: none;
+            background-color: $bckgr;
+            width: 1.5rem;
+            height: 1.5rem;
+            margin: 0 1rem 0 0;
         }
-        textarea{
-            border: 1px solid rgb(63, 63, 63);
-            width: 80%;
-            margin-bottom: 0.5em;
-            background-color: black;
+        #gdpr:checked {
+            display: none;
         }
-        button{
-            border: 1px solid rgb(63, 63, 63);
-            background-color: black;
-            color: white;
-            font-weight: 500;
-            padding: 0.5em 1.5em;
-            font-weight: 400;
-            &:hover{
-                font-weight: 600;
-            }
+        span {
+            color: rgba(255, 255, 255, 0.473);
+            font-weight: 300;
+            font-size: 1rem;
+            line-height: 1.15rem;
+        }
+        .formButt {
+            height: 4rem;
+            font-weight: $header;
         }
     }
-    div{
-        margin-top: 1em;
-        
+
+    .contactInfo {
         display: flex;
         flex-direction: column;
-        h2{
-            text-align: center;
-        }
-        .aboutButton{
-            margin-top: 0.5em;
-            align-self: center;
-            border: 2px solid white;
-            background-color: black;
-            padding: 1em 3.5em;
-            font-weight: 500;
-            span{
-                color: black;
-                background-color: white;
-                font-weight: 800;
-                padding: 0.05em 0.15em;
+        gap: 3rem;
+        margin-bottom: 2rem;
+        .aboutButton {
+            display: flex;
+            flex-direction: column;
+            align-items: center;
+            font-weight: $header;
+            font-size: $h2m;
+            gap: 2rem;
+            img {
+                width: 6rem;
             }
         }
     }
 }
+
