--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -1,13 +1,27 @@
 @import "./mixins.scss";
-$colorMain: white;
+@import "./variables.scss";
 
 
 .header{
     position: relative;
     z-index: 5;
-    //border-bottom: 1px solid rgba(255, 255, 255, 0.3);
+    border-bottom: 2px solid rgba(255, 255, 255, 0.438);
     height: 3.8em;
     margin-top: 0.5em;
+    margin-bottom: 2rem;
+    padding-bottom: 4px;
+    background-color: #0C0C0C;
+  }
+  .headerContainer{   
+    width: 85vw;
+    height: 100%;
+    margin: 0 auto;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 ;
+    background-color: #0C0C0C;
   }
   .filler{
     width: 2.7em;
@@ -21,7 +35,7 @@ $colorMain: white;
     .kory{
       width: 10em;
       font-weight: bold;
-      font-size: 20px;
+      font-size: $h3a;
       text-align: center;
     }
   .menu{
@@ -39,7 +53,7 @@ $colorMain: white;
       background-color: $colorMain;
       border-radius: 2px;
       height: 3px;
-      width: 2rem;
+      width: 1.3rem;
       margin: 6px;
     }
   }
@@ -77,7 +91,6 @@ $colorMain: white;
         }
       }
     }
-  
     .cross {
           span {
             transition: 0.5s ease-out;
@@ -97,13 +110,16 @@ $colorMain: white;
       position: absolute;
       width: 100%;
       left: 0;
-      background-color: black;
-      
+      top: 35px;
+      border-bottom: 2px solid rgba(255, 255, 255, 0.438);
+      background-color: #0C0C0C;
+      padding-bottom: 1rem;
     }
     .mobileMenu2{
       opacity:1;
       transform: translateY(10%);
     }
+
   }
 
 
