--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -13,8 +13,14 @@ h2 {
     flex-direction: column;
     align-items: center;
     text-align: center;
+    font-family: $fontArchivo;
+    @media (min-width: 1248px) {
+        flex-direction: row;
+        justify-content: space-around;
+    }
     .contactForm {
         width: 100%;
+        max-width: 36.5rem;
         display: flex;
         flex-direction: column;
         gap: 1.5rem;
@@ -25,6 +31,10 @@ h2 {
             color: rgb(255, 255, 255);
             padding: 0.75rem;
             font-weight: 300;
+        }
+        textarea {
+            resize: none;
+            height: 10rem;
         }
         label {
             display: flex;
@@ -50,6 +60,11 @@ h2 {
             height: 4rem;
             font-weight: $header;
         }
+        .formMessage {
+            color: rgba(255, 0, 0, 0.712);
+            font-weight: 300;
+            font-size: 1rem;
+        }
     }
 
     .contactInfo {
@@ -57,6 +72,10 @@ h2 {
         flex-direction: column;
         gap: 3rem;
         margin-bottom: 2rem;
+        @include tablet {
+            flex-direction: row;
+            justify-content: space-around;
+        }
         .aboutButton {
             display: flex;
             flex-direction: column;
@@ -67,6 +86,9 @@ h2 {
             img {
                 width: 6rem;
             }
+        }
+        .aboutButton:hover {
+            text-decoration: underline;
         }
     }
 }
