--- a/src/scss/_header.scss
+++ b/src/scss/_header.scss
@@ -11,6 +11,7 @@
     margin-bottom: 2rem;
     padding-bottom: 4px;
     background-color: #0C0C0C;
+    font-family: $fontArchivo;
   }
   .headerContainer{   
     width: 85vw;
