--- a/src/scss/App.scss
+++ b/src/scss/App.scss
@@ -58,6 +58,8 @@ a {
   align-items: flex-start;
   justify-content: center;
   background-color: #0C0C0C;
+  padding-top: 6rem;
+  padding-bottom: 4rem;
 }
 
 button{
