--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -32,6 +32,9 @@ h2 {
             padding: 0.75rem;
             font-weight: 300;
         }
+        input:not(:placeholder-shown), textarea:not(:placeholder-shown) {
+            background-color: black;
+        }
         textarea {
             resize: none;
             height: 10rem;
@@ -46,9 +49,19 @@ h2 {
             width: 1.5rem;
             height: 1.5rem;
             margin: 0 1rem 0 0;
+            position: relative;
+            transition: transform 1.5s ease-in-out;
         }
-        #gdpr:checked {
-            display: none;
+        #gdpr:checked::after {
+            content: "";
+            position: absolute;
+            width: 6px; /* Délka první čárky */
+            height: 14px; /* Délka druhé čárky */
+            border-bottom: 2px solid white; /* Spodní část fajfky */
+            border-right: 2px solid white; /* Pravá část fajfky */
+            transform: rotate(45deg) translate(1px, -3px); /* Natočení do tvaru fajfky */
+            top: 3px; /* Posun dolů */
+            left: 5px; /* Posun doprava */
         }
         span {
             color: rgba(255, 255, 255, 0.473);
