scroll update, safari fix

--- a/src/index.scss
+++ b/src/index.scss
@@ -7,6 +7,13 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  scroll-behavior: auto; /* ✅ Zabrání Firefoxu v "chytrém" scrollování */
+
 }
+
+html {
+  scroll-behavior: auto; 
+  -webkit-overflow-scrolling: auto;
+}  
 
 
