--- a/src/scss/_contact.scss
+++ b/src/scss/_contact.scss
@@ -74,7 +74,7 @@ h2 {
             font-weight: $header;
         }
         .formMessage {
-            color: rgba(255, 0, 0, 0.712);
+            color: rgb(255, 255, 255);
             font-weight: 300;
             font-size: 1rem;
         }
@@ -94,7 +94,7 @@ h2 {
             flex-direction: column;
             align-items: center;
             font-weight: $header;
-            font-size: $h2m;
+            font-size: $h3m;
             gap: 2rem;
             img {
                 width: 6rem;
@@ -106,3 +106,6 @@ h2 {
     }
 }
 
+button {
+    -webkit-appearance: none;
+}
