--- a/src/scss/_portfolios.scss
+++ b/src/scss/_portfolios.scss
@@ -13,7 +13,14 @@
     @include desktop{
         max-width: 805px;
     }
-    
+    /*.back a{
+        font-size: 0.875rem;
+        font-weight: 400;
+        font-family: $fontArchivo;
+    }
+    .back span {
+        margin-bottom: 0.15rem;
+    } */
     .portMain{
         width: 100%;
         display: flex;
@@ -115,6 +122,7 @@
             font-weight: 600;
             width: 100%;
             text-align: center;
+            margin-bottom: 2em;
         }
     }
 }
