--- a/src/scss/_body.scss
+++ b/src/scss/_body.scss
@@ -20,6 +20,7 @@
     font-weight: $header;
     color: rgba(255, 255, 255, 0.473);
     margin-left: 1.6rem;
+    margin-bottom: 1.4rem;
   }
   @include tablet{
     width: 46rem;
